<resources>
    <string name="app_name">Geartronix</string>
    <string name="default_text">text</string>
    <string name="username">E mail or contact number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">Ok</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Login with a different account...</string>
    <string name="welcome_message"> Welcome to Geartronix</string>
    <string name="gallery">Gallery</string>
    <string name="messages">Messages</string>
    <string name="FindUs">Find us</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="services">Services</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_email">info@geartronix.co.za</string>
    <string name="slogan_1">The best in transmission repairs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in2">Sign in</string>
    <string name="ddd">app_name</string>
    <string name="sign_out">Sign out</string>
    <string name="technical_error">We are currently experiences technical issues please try again later</string>
    <string name="login_error">Login error</string>
    <string name="choose_an_activity">Choose an activity</string>
    <string name="picture_saved_to_gallery">Picture saved to gallery</string>
    <string name="send_to">Send to</string>
    <string name="welcome">Welcome</string>
    <string name="edit">Edit</string>
    <string name="points">Points</string>
    <string name="cars">Cars</string>
    <string name="ask_geartronix_a_question">Ask Geartronix a question</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="enter_email_or_cell">Enter your email or mobile number</string>
    <string name="write_a_message">Write a message...</string>
    <string name="typing">Typing...</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="join_discussions">Join discussions</string>
    <string name="block">Block</string>
    <string name="contact_us">Contact us</string>
    <string name="find_us">Find us</string>
    <string name="help">Help</string>
    <string name="create_username">Username...</string>
    <string name="enter_city">City</string>
    <string name="confirm">Confirm</string>
    <string name="profile_change_confirmation_message">Would you like to save changes you made to your profile</string>
    <string name="cancel">Cancel</string>
    <string name="profile_editmode_exited">Exited Edit mode</string>
    <string name="profile_update_success_message">Profile updated...</string>
    <string name="profile_update_heading">Updated successful</string>
    <string name="profile_update_error_message">Please make changes to your profile before saving</string>
    <string name="No">No</string>
    <string name="yes">Yes</string>
    <string name="sign_in_welcome_message">please enter your password to continue</string>
    <string name="Hi">Hi</string>
    <string name="general_checkup_diagostic_message">You are about to request a general check up and diagnostic</string>
    <string name="continue_message">, would you like to continue?</string>
    <string name="create_account">Create account</string>
    <string name="update_password">Update password</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="generic_success_message">Successful</string>
    <string name="username_error">Please enter a valid name</string>
    <string name="cell_error">Please enter a valid cellphone number</string>
    <string name="gender_error">Please select your gender</string>
    <string name="password_error">Your password does not meet minimum requirements</string>
    <string name="password_match_error">Your passwords don\'t match</string>
    <string name="quit_registration">Quit registration</string>
    <string name="enter_password">Please enter your password</string>
    <string name="switch_user">Switch user</string>
    <string name="referral">Referrals</string>
    <string name="change_password">Change your password</string>
    <string name="feature_error_message">This feature is currently unavailable</string>
    <string name="loading_services">Loading services...</string>
    <string name="loading_gallery">Loading Gallery...</string>
    <string name="no_linked_users">No linked users found</string>
    <string name="register_new_user">Register new user</string>
    <string name="exit_app">Exit app</string>
    <string name="manual_sign_in">Manual sign in</string>
</resources>
