<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_register"
            android:icon="@drawable/register_icon"
            android:title="@string/register_new_user"/>

        <item
            android:id="@+id/action_switch_users"
            android:icon="@drawable/switch_users_icon"
            android:title="@string/switch_user"/>

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/close_icon"
            android:title="@string/exit_app"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_username_password"
            android:icon="@drawable/signin_icon"
            android:title="@string/manual_sign_in"
            app:showAsAction="never"/>

    </group>

</menu>


