<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:enabled="false"
        android:visible="false"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_icon"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
</menu>