<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/menuContentLoginID"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="50dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frmLoginBottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ScrollView
            android:id="@+id/scrLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="60dp"
                tools:context="co.za.geartronix.activities.LoginActivity">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="0dp"
                    app:srcCompat="@drawable/logo"/>

                <TextView
                    android:id="@+id/txtWelcomeMessage"
                    style="@style/mediumLabel"
                    android:text="@string/sign_in_welcome_message"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/lblUsername"
                    style="@style/mediumLabel"
                    android:text="@string/enter_email_or_cell"
                    android:textColor="#cccccc"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/txtUsername"
                    style="@style/mediumTextBox"
                    android:hint="@string/enter_email_or_cell"
                    android:visibility="gone"/>

                <TextView
                    style="@style/mediumLabel"
                    android:text="@string/password"
                    android:textColor="#cccccc"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:padding="0dp">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:paddingRight="55dp"
                        style="@style/mediumTextBox"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

                    <ImageButton
                        android:id="@+id/imgBtnPasswordViewtoggle"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:onClick="onViewClickedEvent"
                        app:srcCompat="@drawable/passhidden_view_mode"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/mediumButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:onClick="onViewClickedEvent"
                    android:text="@string/sign_in"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/login_icon"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/frmLoginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/login_bottom_background"
        android:paddingBottom="12dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/txtForgotPassword"
            style="@style/forgotPasswordLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="0dp"
            android:layout_toLeftOf="@+id/lblSwitchUser"
            android:onClick="onViewClickedEvent"
            android:padding="0dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/lblSwitchUser"
            style="@style/mediumLabel"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="0dp"
            android:onClick="onViewClickedEvent"
            android:paddingBottom="0dp"
            android:paddingLeft="40dp"
            android:paddingRight="30dp"
            android:paddingTop="0dp"
            android:text="@string/switch_user"
            android:textAlignment="center"/>
    </RelativeLayout>

    <include
        android:id="@+id/frmLoadingScreen"
        layout="@layout/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/frmUserSelectContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tileTransBlack2"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/largeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="Select a linked user"
                android:textAlignment="center"/>

            <ListView
                android:id="@+id/lstUserSelection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="5dp"/>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>